--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -33,11 +33,11 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.example.ujikomefrizal"
+        applicationId "com.ujikom.ujikomefrizal"
         minSdkVersion 21
         targetSdkVersion 27
-        versionCode flutterVersionCode.toInteger()
-        versionName flutterVersionName
+        versionCode 1
+        versionName "0.1a"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
 
