--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,18 +22,21 @@ dependencies:
   
   intl: ^0.15.7
   dio: ^2.0.2
+  shared_preferences: ^0.5.1+2 
   
   material_design_icons_flutter: ^3.0.39
   flutter_swiper: ^1.1.4
   image_picker: ^0.5.0+3
   date_format: ^1.0.6
   flutter_spinkit: ^3.1.0
-  cached_network_image: ^0.5.1
+  cached_network_image: ^0.7.0
+  flutter_cache_manager: ^0.3.2
   shimmer: ^1.0.0
   flutter_webview_plugin: ^0.3.0+2
   url_launcher: ^5.0.1
   datetime_picker_formfield: ^0.1.8
   numberpicker: ^1.0.0
+  crypto: ^2.0.6
 
 dev_dependencies:
   flutter_test:
@@ -47,5 +50,6 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   assets:
+    - assets/images/
     - assets/data/airports.json
     - assets/data/trainstation.json
